--- a/src/app/page-components/customizations/customizations.component.html
+++ b/src/app/page-components/customizations/customizations.component.html
@@ -1,7 +1,24 @@
 <div class="customizations-container page">
-  <p class="customizing-description">Before running a simulation, create a table with customized players and the conditions you want.</p>
-  <p class="customizing-description">Customize any table or new set ofgame conditions you can imagine from penitration to DAS and way beyond.</p>
-  <p class="customizing-description">Besides customize players with beginning bankrolls amd bet sizes, customize their strategies for unit resizing, bet spreads and wonging. Choose a player's play chart from basic strategy, the illustrious 18 or to one of your own creation. Experiment with different approaches to tipping and even create your own card counting strategy.</p>
+  <accordion title="How do Customizations work?">
+    <p class="customizing-description">
+      Before running a simulation, create a table with customized players and the conditions you want.
+    </p>
+    <p class="customizing-description">
+      Customize any table or new set of game conditions you can imagine from penitration to DAS and way beyond.
+    </p>
+    <p class="customizing-description">
+      Beyond customizing players with beginning bankrolls and bet sizes, customize their strategies for 
+      <span class="newline"><i>unit resizing</i></span>, 
+      <span class="newline"><i>bet spreads</i>
+      </span> and even <span class="newline"><i>wonging</i></span>.
+    </p>
+    <p class="customizing-description">
+      Choose a player's <span class="newline"><i>play chart</i></span> from basic strategy, the Wizard of Odd's suggestion or even <span class="newline"><i><b>one of your own creation</b></i></span>.
+    </p>
+    <p class="customizing-description">
+      Experiment with different approaches to <span class="newline"><i>tipping</i></span> and even <i>create your own card counting strategy with play charts to go along with it.</i>
+    </p>
+  </accordion>
   <div class="links-container">
   @for(link of customizationLinks; track link) {
     <div class="link-wrapper">
