--- a/src/app/shared-components/accordion/accordion.component.html
+++ b/src/app/shared-components/accordion/accordion.component.html
@@ -10,7 +10,9 @@
       (click)="expand()"
       class="simple toggle"
       [class.close]="!accordionExpand"
-    >^</button>
+    >
+      <span class="material-symbols-outlined">keyboard_arrow_up</span>
+    </button>
   </div>
 }
   <ng-content></ng-content>
