--- a/src/app/shared-components/header-nav/header-nav.component.html
+++ b/src/app/shared-components/header-nav/header-nav.component.html
@@ -21,11 +21,11 @@
         <p>Simulation</p>
       </a>
     </div>
-    <div class="link-wrapper">
+    <!-- <div class="link-wrapper">
       <a routerLink="/dashboard" routerLinkActive="selected">
         <p>Dashboard</p>
       </a>
-    </div>
+    </div> -->
     <div class="link-wrapper">
       <a routerLink="/index-charts" routerLinkActive="selected">
         <p>Index Charts</p>
