--- a/src/app/page-components/dashboard/bankroll-chart/bankroll-chart.component.html
+++ b/src/app/page-components/dashboard/bankroll-chart/bankroll-chart.component.html
@@ -1,5 +1,7 @@
 <div class="bankroll-chart-container">
-  <button (click)="showBankrollChart$.next(false)" class="return-x">X</button>
+  <button (click)="showBankrollChart$.next(false)" class="return-x">
+    <span class="material-symbols-outlined">close</span>
+  </button>
 
   <div class="row row-wrapper">
     <div class="select-wrapper">
