add home page content

--- a/src/app/page-components/home/home.component.html
+++ b/src/app/page-components/home/home.component.html
@@ -1,3 +1,86 @@
 <div class="home-container page">
-  <p>The Home page will have instructions and images. It should get the point across of what the app can do. The right clientele should be sold at this point</p>
+  <h2>What is Double Up Blackjack and how will this help me beat it!</h2>
+  <div class="content-tiles-wrapper">
+    <accordion title="Is this for you?">
+      <div class="content-tile">
+        <p>This game is a Blackjack "variant". Which means if you know how to play regular old blackjack, this will be easy to pick up, if not, then you may wan't to start with a site that teaches traditional blackjack.</p>
+        <p>Also this site is 100% geared towards <i>Advantage Play</i>, so ....</p>
+        <bullet-point>if you aren't familiar with terms like , advantage play, wonging or penetration</bullet-point>
+        <bullet-point>or, if you dont know what E.V. stands for,</bullet-point>
+        <bullet-point>or if you don't know who Collin is,</bullet-point>
+        <p>then this may be more than you are ready for now, but of course, you are still welcome to stay.</p>
+        <p>Also this game is not known far and wide, in fact, it is fairly rare. It is played at a few tables in Cripple Creek, Colorado, in the Aguas Calientas Casinos in California, in a few tribal casinos in Oklahoma, in the UK and in the Philipines. There may be more, but those are the known ones.</p>
+      </div>
+    </accordion>
+    <accordion title="How to play Double Up Blackjack">
+      <div class="content-tile">
+        <p>If you know how to pay blackjack lets start there.</p>
+        <p>Like any blackjack variation there is an advantage given to the player and something taken away.</p>
+        <p>The advantage the player is given is that, after the first 2 cards have beem dealt, the player may <i>double up</i> the original bet, or any amount up to it <b>without taking another card</b>.</p>
+        <p>That's a pretty awesome advantage. Imagine the dealer has a seven and you have a 20. You can turn your $25 bet into a $50 dollar bet when the odds are clearly in your favor.</p>
+        <p>Or, even better, <i>since you may double up after splitting</i>, imagine splitting aces, getting a 21 and having the option to double up your almost guaranteed bet.</p>
+        <p>But its not as guaranteed as you think.</p>
+        <p>The doubled up portion of the bet is different than the original bet in that the "double up" is betting your hand will <b>beat</b> the dealer's hand. This means, as far as the double up portion of the bet goes, a push on the hand is a loss. This means that "guarenteed" bet on a doubled 21 isn't really even guaranteed to push. If the dealer draws to 21 the player loses, but again, for the double up portion only.</p>
+        <p>Even with this gotcha, <i>doubling up</i> can be a huge boost to you EV for certain hands.</p>
+        <p>The advantage the player gives up for the double up advantage is that, if the dealer turns over or hits to a 16, hard or soft, the entire hand is a push. Even the doubled up portion of a bet is a push.</p>
+        <p>However, if the player has hit to 21, the players hand still wins. This means those hands with split aces that turned into 21 with a double up <b>do get paid</b>.</p>
+        <p>Everything else is just like traditional blackjack.</p>
+      </div>
+    </accordion>
+    <accordion title="Wizard of Odd's Analysis and Information">
+      <div class="content-tile">
+        <p>The rule variations from traditional blackjack results in changes to basic strategy that aren't always intuitive.</p>
+        <p>I leave it to the <i>Wizard of Odds</i> to give an initial analysis of the game<button click="launchModal()" class="simple underline iframe-button">here.</button>The part that really caught my eye is the house edge on a H17 game is only 0.32%.</p>
+        <p>Which only makes one wonder what the edge might be with counting.</p>
+        <p>Don't worry, this game is definately beatable. That's the purpose of this site. If you study the information on this site, you will soon understand how and why.</p>
+      </div>
+    </accordion>
+    <accordion title="What does a simulation tell me?">
+      <div class="content-tile">
+        <p>Imagine you want to compare the results of 2 players, Alan and Barb, after a million rounds. You give each player $25000 to start with, and a $25 betting unit.</p>
+        <p>Here's how Alan plays:</p>
+        <bullet-point>Alan is counting with the same HiLo count used for traditional blackjack. This counting option is built in to the software.</bullet-point>
+        <bullet-point>For a play strategy, Alan uses the chart found on the "Wizard of Odds" page. This is an included chart so there was no customization required.</bullet-point>
+        <bullet-point>Alan does not include any play deviations.</bullet-point>
+        <bullet-point>Since Alan is using the HiLo count, Alan buys insurance for counts of a true 3 or higher just like in traditional blackjack.</bullet-point>
+        <bullet-point>Alan is spreading from 1 to 8 units, increasing 1 unit per increase in the true count.</bullet-point>
+        <bullet-point>Alan is not increasing his betting unit so bets with a $25 betting unit for all million rounds.</bullet-point>
+        <bullet-point>At a true 2, Alan wongs in with a second hand and wongs out for hands below a true 2.</bullet-point>
+        <bullet-point>Alan tips $1 everytime a new dealer rotates in as well as for the hand immediatly after a blackjack. This was not a built in tipping behavior, but you are able to maje and save it quickly with a tool on this site.</bullet-point>
+        <p>Barb plays a little differently, here's what that looks like:</p>
+        <bullet-point>Barb is counting with strategy similar to HiLo but with some adjustments that seemed to make sense. Comparing this count against regular HiLo will help decide if this counting system adds any value. You were able to make and save this couting system easily and quickly with a tool on this site.</bullet-point>   
+        <bullet-point>Barb plays with a chart she made in the deviations section. Although you like the chart found on the "Wizard of odds" site, it is for a H17 game and this is a soft 17 game, so you suspect adjustments need to be made.</bullet-point>        
+        <bullet-point>Also, from the millions of simulations run to create this chart, you are able to find multiple playing deviations at different counts.</bullet-point>
+        <bullet-point>You spread Barb's bets from 1 to 10 units, increasing 1 unit per increase in the true count until a true 3 then by 3 units for 4 and 3 for 5. This was a custom strategy you created and saved using a tool from this site.</bullet-point>
+        <bullet-point>You give Barb a strategy to increase her bet as her bankroll grows. There are several built in strategies to chose from but you created and saved a new one where barb eventually has a $100 betting unit. Barb's strategy increases her betting unit very gradually so as to actually reduce the risk of ruin run by the previous increase.</bullet-point>
+        <bullet-point>At a true 2, she wongs in with a second hand and wongs in with a third at a true 4. Once a hand has wonged in, it doesn't wongs out until the count is below a true 1.</bullet-point>
+        <bullet-point>Barb never tips.</bullet-point>
+      </div>
+    </accordion>
+    <accordion title="Interpreting Simulation Results">
+      <div class="content-tile">
+        <p>Just do it</p>
+      </div>
+    </accordion>
+    <accordion title="What can I customize in a simulation?">
+      <div class="content-tile">
+        <p>Pretty much <b>anything</b> and <b>everything, including:</b></p>
+        <bullet-point [background]="'lite'">Table with conditions and players</bullet-point>
+        <bullet-point>Conditions can be customized to any casino conditions</bullet-point>
+        <bullet-point [background]="'lite'">Players can be with handles, inital bankrolls, an initial betting unit as well as the strategies and behaviors listed below.</bullet-point>
+        <bullet-point>Betspread Strategies</bullet-point>
+        <bullet-point [background]="'lite'">Wonging in and out of additional hands</bullet-point>
+        <bullet-point>Resizing the betting unit</bullet-point>
+        <bullet-point [background]="'lite'">The play strategy chart a player uses</bullet-point>
+        <bullet-point>The counting system a player uses</bullet-point>
+        <bullet-point [background]="'lite'">A player's tipping behavior</bullet-point>
+        <bullet-point>Index charts for any counting system with any table conditions</bullet-point>
+      </div>
+    </accordion>
+    <accordion title="Practice">
+      <div class="content-tile">
+        <p>Just do it too</p>
+      </div>
+    </accordion>
+  </div>
 </div>
